--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@solid-primitives/keyboard": "^1.3.0",
     "@solid-primitives/storage": "^3.5.0",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.3",
