--- a/code/package.json
+++ b/code/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@solid-primitives/keyboard": "^1.3.0",
+    "@solid-primitives/scheduled": "^1.5.0",
     "@solid-primitives/storage": "^3.5.0",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.3",
     "@solidjs/start": "^1.0.1",
+    "@thisbeyond/solid-dnd": "^0.7.5",
     "autoprefixer": "^10.4.19",
     "framer-motion": "^11.2.10",
     "motion": "^10.18.0",
